<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/FrameLayout01" 
   android:layout_width="fill_parent" 
   android:layout_height="fill_parent"   
   >   
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:gravity="center"
	    >
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center"
	    	>
	    	<TextView   
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:id="@+id/mctitle" 
			    android:textSize="18dip"
			    android:textColor="#ffffff"
			    android:gravity="center"
			    android:text="背景圖片"
		   		 />
		</LinearLayout>
		
		<LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
	    	android:gravity="center"
	  	>  
	  		<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	  			> 
			  	<Button   
					android:id="@+id/bg_fhzl" 
					android:background="@drawable/bg_fhzl1"
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_fhzl" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/fhzl"
			   		 />
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 
			   	<Button   
					android:id="@+id/bg_lsct"
					android:background="@drawable/bg_lsct1" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_lsct" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/lsct"
			   		 />	 
			</LinearLayout> 
		</LinearLayout> 
		
		
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:gravity="center"
		  	> 
		  	<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	  			> 
	
			  	<Button   
					android:id="@+id/bg_sjzx" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:background="@drawable/bg_sjzx1"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_sjzx" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/sjzx"
			   		 /> 
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 	
				<Button   
					android:id="@+id/bg_ssnh" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:textSize="18dip"
					android:background="@drawable/bg_ssnh1"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_ssnh" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/ssnh"
			   		 />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:gravity="center"
		  	> 
		  	
		  	<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	  			>
		  		<Button   
					android:id="@+id/bg_wffm" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:background="@drawable/bg_wffm1"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_wffm" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/wffm"
			   		 /> 
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 

				<Button   
					android:id="@+id/bg_ygmm" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:textSize="18dip"
					android:background="@drawable/bg_ygmm1"
					android:paddingLeft="120dip"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/bg_ygmm" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/ygmm"
			   		 /> 
			</LinearLayout>
		</LinearLayout>
	</LinearLayout> 
</LinearLayout>