<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/FrameLayout01" 
   android:layout_width="fill_parent" 
   android:layout_height="fill_parent"   
   >   
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:gravity="center"
	    >
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center"
	    	>
	    	<TextView   
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:id="@+id/mctitle" 
			    android:textSize="18dip"
			    android:textColor="#ffffff"
			    android:gravity="center"
			    android:text="字體顏色"
		   		 />
		</LinearLayout>
		
		<LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
	    	android:gravity="center"
	  	>  
	  		<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	  			> 
			  	<Button   
					android:id="@+id/tc_black" 
					android:background="@drawable/tc_black"
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_black" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_black"
			   		 />
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 
			   	<Button   
					android:id="@+id/tc_blue"
					android:background="@drawable/tc_blue" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_blue" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_blue"
			   		 />
			</LinearLayout> 	 
	 	
	 	  	
		  	<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 
		  	  
			  	<Button   
					android:id="@+id/tc_gray" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:background="@drawable/tc_gray"
					android:gravity="left"
					>
					</Button> 
				<TextView
					android:id="@+id/tc_gray"
					android:text="@string/tc_gray"
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
			   		 /> 
		   </LinearLayout>
		   
		   <LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 
				<Button   
					android:id="@+id/tc_green"
					android:background="@drawable/tc_green" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:textSize="18dip"
					android:paddingLeft="120dip"
					>
					</Button>
				<TextView   
					android:id="@+id/tc_green"
					android:text="@string/tc_green"
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"  
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
			   		 />
			</LinearLayout> 
		</LinearLayout> 
		
		
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dip"
		    android:gravity="center"
		  	> 
		  	<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:gravity="center"
	  			> 
	
			  	<Button   
					android:id="@+id/tc_purper" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:background="@drawable/tc_purper"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_purper" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_green"
			   		 /> 
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 	
				<Button   
					android:id="@+id/tc_red" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:textSize="18dip"
					android:background="@drawable/tc_red"
					android:paddingLeft="120dip"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_red" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_red"
			   		 />
			</LinearLayout> 
		  	
		  	<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			>
		  	
		  	
			  	<Button   
					android:id="@+id/tc_yellow" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:background="@drawable/tc_yellow"
					android:gravity="left"
					>
					</Button> 
				<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_yellow" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_yellow"
			   		 /> 
			</LinearLayout>
			
			<LinearLayout 
	    		android:orientation="horizontal"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="15dip"
	    		android:gravity="center"
	  			> 

				<Button   
					android:id="@+id/tc_white" 
					android:layout_width="30dip" 
					android:layout_height="30dip"
					android:textSize="18dip"
					android:background="@drawable/tc_white"
					android:paddingLeft="120dip"
					>
					</Button>
					<TextView   
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:id="@+id/tc_white" 
				    android:textSize="18dip"
				    android:textColor="#ffffff"
				    android:paddingLeft="5dip"
				    android:text="@string/tc_white"
			   		 /> 
			</LinearLayout>
		</LinearLayout> 	

	</LinearLayout>
</LinearLayout>